feat(wip): add base chat UI
Only UI is rendered, functionality is not yet implemented

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.81.5",
     "ai": "^4.3.19",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -29,6 +29,8 @@
     "ollama-ai-provider": "^1.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
