--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query-devtools": "^5.83.0",
     "ai": "^4.3.19",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
