--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
+    "react-router": "^7.7.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
