--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "fast-deep-equal": "^3.1.3",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.6",
@@ -38,6 +40,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "usehooks-ts": "^3.1.1",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
