--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ai-sdk/react": "^1.2.11",
+    "@ai-sdk/react": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -18,9 +18,9 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.84.1",
     "ai": "^4.3.19",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -28,36 +28,37 @@
     "dexie-react-hooks": "^1.1.7",
     "fast-deep-equal": "^3.1.3",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.6",
+    "motion": "^12.23.12",
     "ollama-ai-provider": "^1.2.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-error-boundary": "^6.0.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
     "remark-gfm": "^4.0.1",
-    "sonner": "^2.0.6",
+    "sonner": "^2.0.7",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "usehooks-ts": "^3.1.1",
     "uuid": "^11.1.0",
-    "zod": "^3.23.8"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@eslint/js": "^9.32.0",
+    "@tanstack/eslint-plugin-query": "^5.83.1",
     "@tanstack/react-query-devtools": "^5.84.1",
-    "@types/node": "^24.0.10",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.5.2",
-    "eslint": "^9.29.0",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.2.0",
-    "tw-animate-css": "^1.3.5",
+    "globals": "^16.3.0",
+    "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.34.1",
-    "vite": "^7.0.0"
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6"
   }
 }
