--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
     "remark-gfm": "^4.0.1",
+    "resumable-stream": "^2.2.3",
     "sonner": "^2.0.7",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
