--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ai-sdk/react": "^1.2.12",
+    "@ai-sdk/openai-compatible": "^1.0.5",
+    "@ai-sdk/provider": "2.0.0-beta.1",
+    "@ai-sdk/react": "^2.0.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -19,7 +21,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
-    "ai": "^4.3.19",
+    "ai": "^5.0.11",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
@@ -29,7 +31,6 @@
     "fast-deep-equal": "^3.1.3",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
-    "ollama-ai-provider": "^1.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-error-boundary": "^6.0.0",
