--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@ai-sdk/openai-compatible": "^1.0.5",
     "@ai-sdk/provider": "2.0.0-beta.1",
-    "@ai-sdk/react": "^2.0.11",
+    "@ai-sdk/react": "2.0.0-beta.6",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
@@ -21,7 +21,7 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.84.1",
-    "ai": "^5.0.11",
+    "ai": "5.0.0-beta.6",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
