--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "ai": "5.0.0-beta.6",
     "ai-latest": "npm:ai@^5.0.14",
     "class-variance-authority": "^0.7.1",
@@ -36,6 +37,7 @@
     "react-error-boundary": "^6.0.0",
     "react-markdown": "^10.1.0",
     "react-router": "^7.7.1",
+    "react-syntax-highlighter": "^15.6.3",
     "remark-gfm": "^4.0.1",
     "resumable-stream": "^2.2.3",
     "sonner": "^2.0.7",
